add experiences in an array
